test/parallel/forall/task-private-vars/indvar-errors-3.good
indvar-errors-3.chpl:6: error: the initialization or type expression of the task-private variable 'tpv1' references the forall loop induction variable 'idx1'
indvar-errors-3.chpl:7: error: the initialization or type expression of the task-private variable 'tpv2' references the forall loop induction variable 'idx2'
indvar-errors-3.chpl:8: error: the initialization or type expression of the task-private variable 'tpv3' references the forall loop induction variable 'idx3'
